# MyWork-AI

./: .bench_history.json  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json.example  .pre-commit-config.yaml  .security_baseline.json  BRAIN_EXPORT_20260209_000109.md  BRAIN_EXPORT_20260209_003049.csv  BRAIN_EXPORT_20260209_003049.md  BRAIN_EXPORT_20260209_003127.csv  BRAIN_EXPORT_20260209_003127.md  BRAIN_EXPORT_20260209_145120.md  BRAIN_EXPORT_20260209_145127.md  BRAIN_EXPORT_20260209_180117.md  BRAIN_EXPORT_20260209_180125.csv  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOY_TEST_REPORT.md  FAQ.md  FIRST_TIME_UX_TEST_REPORT.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  SPRINT_SUMMARY.md  STATE.md  STRATEGY.md  TEMPLATE_TEST_REPORT.md  TESTING_SUMMARY.md  TOUR_TEST_REPORT.md  TROUBLESHOOTING.md  USE_CASES.md  find_hanging_tests.py  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  PYPI_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml  security.yml  smoke-ai-dashboard.yml  smoke-marketplace.yml  smoke-task-tracker.yml
.metrics/: history.json
.mw/: dashboard.html
.mw/gsd/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.mw/profiles/: 20260214_000906_echo_hello_world.json
.mw/snapshots/: snapshot_20260212_081006.json  snapshot_20260214_150650_156846.json  snapshot_20260214_190739_689812.json  snapshot_20260214_200646_505874.json  snapshot_20260214_200839_098061.json  snapshot_20260215_140736_722848.json  snapshot_20260216_100810_826681.json
.planning/: AUDIT_REPORT_2026-01-29.md  AUDIT_SUMMARY_2026-01-29.md  BRAIN.md  ENHANCED_PROMPT.md  LAUNCH_READINESS_PLAN.md  MARKETPLACE_ACCESS_CHECKLIST.md  MARKETPLACE_FIRST_LISTING_PLAN.md  MODULE_REGISTRY.md  PROJECT.md  PROJECT_REGISTRY.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UPGRADE_PLAN.md  brain_index.json  linting_results.json
.planning/audits/: sportsai-security-audit.md
.planning/business/: BUSINESS_PLAN.md  TECHNICAL_SPEC.md
.planning/codebase/: STACK.md  (+6 more)
assets/: logo.txt
docs/: 24H_SPRINT.md  50_PRODUCTION_TASKS.md  USER_JOURNEY_TEST.md  ai-features.md  cli-reference.md  faq.md  index.md  quickstart.md  troubleshooting.md
examples/: README.md  fastapi-example.md  fullstack-example.md  marketplace-example.md  nextjs-example.md  saas-example.md
exports/: BRAIN_EXPORT_20260209_000109.md  BRAIN_EXPORT_20260209_003049.md  BRAIN_EXPORT_20260209_145127.csv  BRAIN_EXPORT_20260209_145127.md  BRAIN_EXPORT_20260209_180117.md
projects/: README.md  games  my-games  sports-ai
reports/: FRAMEWORK_AUDIT_2026-01-26.md  FULL_AUDIT_2026-01-27.md  FULL_AUDIT_2026-01-28.md  MARKETPLACE_LISTING_STATUS.md  MARKETPLACE_QA_TEMPLATE.md  SPORTSAI_LISTING_ASSETS_2026-01-27.md  SPORTSAI_SCREENSHOT_GUIDE.md  SPORTSAI_SUPPORT_POLICY.md  STRATEGIC_AUDIT_2026-01-27.md  app_status_check.md  e2e_report_2026-02-09.md  e2e_summary_2026-02-09.json  framework_simulation_2025-02-09.md  security_audit_2026-02-09.md  simulation_report_2026-02-09.json  simulation_report_2026-02-09.md  simulation_report_2026-02-10.json  simulation_report_2026-02-10.md  workflow_test-workflow_20260212_040901.json  workflow_test-workflow_20260212_040911.json  workflow_test-workflow_20260212_040931.json  workflow_test-workflow_20260212_050813.json  workflow_test-workflow_20260212_050910.json  workflow_test-workflow_20260212_051208.json
tests/: __init__.py  conftest.py  test_ai_assistant.py  test_ai_assistant_multi.py  test_ai_generate.py  test_ai_review.py  test_analytics.py  test_api_generator.py  test_api_server.py  test_auto_lint_scheduler.py  test_auto_linting.md  test_auto_linting_agent.py  test_autocoder_service.py  test_autoforge_api.py  test_bench.py  test_brain.py  test_brain_graph.py  test_brain_learner.py  test_brain_search.py  test_changelog_gen.py  test_cmd_audit.py  test_commands.py  test_completions.py  test_config.py  test_config_cmd.py  test_context_builder.py  test_db_manager.py  test_demo.py  test_dep_checker.py  test_depgraph.py  test_deploy.py  test_deps.py  test_docs_site.py  test_doctor.py  test_env_manager.py  test_error_handling_improvements.py  test_health_check.py  test_hook.py  test_integration.py  test_lint_watcher.py  (+31 more)
tests_backup/: test_ai_docs.py  test_ai_optimize.py  test_ai_refactor.py  test_auto_lint_fixer.py  test_auto_update.py  test_autocoder_api.py  test_autoforge.py  test_autoforge_service.py  test_badge.py  test_brain_quality.py  test_brain_semantic.py  test_brain_sync.py  test_credits_ledger.py  test_demo.py  test_doc_generator.py  test_env.py  test_init.py  test_metrics.py  test_mw_ci.py  test_pair_session.py  test_perf_analyzer.py  test_plugin_manager.py  test_profiler.py  test_project_archive.py  test_project_compare.py  test_project_registry.py  test_quality_gate.py  test_scaffold.py  test_secrets_vault.py  test_security_scanner.py  test_smoke_test_marketplace.py  test_smoke_test_task_tracker.py  test_switch_llm_provider.py  test_test_coverage.py  test_tree_viewer.py  test_workflow_engine.py
tools/: AUTO_LINTER_README.md  AUTO_LINT_README.md  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  _template.py  agent.py  ai_assistant.py  ai_docs.py  ai_optimize.py  ai_refactor.py  ai_review.py  analytics.py  api_server.py  auto_lint_fixer.py  auto_lint_scheduler.py  auto_linting_agent.py  auto_update.py  autocoder_api.py  autocoder_service.py  autoforge_api.py  autoforge_service.py  badge.py  bench.py  benchmark.py  brain.py  brain_graph.py  brain_learner.py  brain_quality.py  brain_search.py  brain_semantic.py  brain_sync.py  changelog_gen.py  ci_status.py  config.py  context_builder.py  credits_ledger.py  db_manager.py  demo.py  dep_checker.py  depgraph.py  (+62 more)
workflows/: _template.md  autocoder_feature_verification.md  code_review.md  create_n8n_workflow.md  deploy_to_vercel.md  framework_maintenance.md  getting_started.md  gsd_to_autocoder.md  gsd_with_n8n.md  incident_response.md  marketplace_ci_template.yml  marketplace_smoke_cron.yml  release.md  session_handoff.md  use_autocoder.md
(+606 files in other folders)
