[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mywork-ai"
version = "1.0.0"
description = "AI-powered development framework with tools, workflows, and brain (knowledge vault)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dan Sidanutz", email = "dan@mywork.ai"}
]
keywords = ["ai", "development", "framework", "automation", "claude", "gsd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mw = "mw:main"
mywork = "mw:main"
mywork-brain = "brain:main"
mywork-health = "health_check:main"
mywork-registry = "module_registry:main"
mywork-scaffold = "scaffold:main"
mywork-update = "auto_update:main"

[project.urls]
Homepage = "https://github.com/dansidanutz/MyWork-AI"
Documentation = "https://github.com/dansidanutz/MyWork-AI#readme"
Repository = "https://github.com/dansidanutz/MyWork-AI.git"
Issues = "https://github.com/dansidanutz/MyWork-AI/issues"

[tool.setuptools]
packages = ["tools"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["tools"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
