[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mywork-ai"
version = "2.7.0"
description = "Complete AI-powered development framework with 78 CLI commands for code generation, project analysis, n8n workflow automation, security scanning, and deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dan Sidanutz", email = "dan@mywork.ai"}
]
keywords = [
    "ai", "artificial-intelligence", "development", "framework", "automation", 
    "cli", "developer-tools", "code-generation", "devops", "project-management",
    "security-scanning", "code-analysis", "deployment", "testing", "refactoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
agent = [
    "litellm>=1.40.0",
    "pyyaml>=6.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.7.0",
]
all = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
mw = "tools.mw:main"
mywork = "tools.mw:main"

[project.urls]
Homepage = "https://github.com/dansidanutz/MyWork-AI"
Documentation = "https://docssite-igkwv43c5-irises-projects-ce549f63.vercel.app"
Repository = "https://github.com/dansidanutz/MyWork-AI"
Issues = "https://github.com/dansidanutz/MyWork-AI/issues"
Changelog = "https://github.com/dansidanutz/MyWork-AI/blob/main/CHANGELOG.md"
"Live Demo" = "https://frontend-hazel-ten-17.vercel.app"

[tool.setuptools]
packages = ["tools"]

[tool.setuptools.package-data]
tools = ["*.py"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"

# Black configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=60 --timeout-method=thread -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
timeout = 60
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["tools"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
